--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,6 +39,23 @@ body {
   flex-wrap: wrap;
 }
 
+.information {
+  width: 50%;
+  height: 50px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.info-level, .info-points, .info-player {
+  width: 33.3%;
+  text-align: center;
+}
+
 .board {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
